@@ -134,6 +134,7 @@ my %Codes = (
     KW => ['965',   '00',    '0'],     # Kuwait
     KY => [  '1',  '011',    '1'],     # Cayman Islands
     KZ => [  '7',  '810',    '8'],     # Kazakhstan (IDD really 8**10)
+    LA => ['856',   '00',    '0'],     # Laos
     LB => ['961',   '00',    '0'],     # Lebanon
     LC => [  '1',  '011',    '1'],     # Saint Lucia
     LI => ['423',   '00',  undef],     # Liechtenstein
@@ -152,12 +153,14 @@ my %Codes = (
     MH => ['692',  '011',    '1'],     # Marshall Islands
     MK => ['389',   '00',    '0'],     # Macedonia, the Former Yugoslav Republic of
     ML => ['223',   '00',    '0'],     # Mali
+    MM => [ '95',   '00',  undef],     # Myanmar
     MN => ['976',  '001',    '0'],     # Mongolia
     MO => ['853',   '00',    '0'],     # Macao
     MP => [  '1',  '011',    '1'],     # Northern Mariana Islands
     MQ => ['596',   '00',    '0'],     # Martinique
     MR => ['222',   '00',    '0'],     # Mauritania
     MS => [  '1',  '011',    '1'],     # Montserrat
+    MT => ['356',   '00',   '21'],     # Malta
     MU => ['230',   '00',    '0'],     # Mauritius
     MV => ['960',   '00',    '0'],     # Maldives
     MW => ['265',   '00',  undef],     # Malawi
@@ -172,9 +175,11 @@ my %Codes = (
     NI => ['505',   '00',    '0'],     # Nicaragua
     NL => [ '31',   '00',    '0'],     # Netherlands
     NO => [ '47',   '00',  undef],     # Norway
+    NP => ['977',   '00',    '0'],     # Nepal
     NR => ['674',   '00',    '0'],     # Nauru
     NU => ['683',   '00',    '0'],     # Niue
     NZ => [ '64',   '00',    '0'],     # New Zealand
+    OM => ['968',   '00',    '0'],     # Oman
     PA => ['507',   '00',    '0'],     # Panama
     PE => [ '51',   '00',    '0'],     # Peru
     PF => ['689',   '00',  undef],     # French Polynesia
@@ -192,6 +197,7 @@ my %Codes = (
     RE => ['262',   '00',    '0'],     # Reunion
     RO => [ '40',   '00',    '0'],     # Romania
     RS => ['381',   '99',    '0'],     # Serbia
+    RU => [  '7',  '810',    '8'],     # Russia 8**10 NOTE: may change to 00, 0
     RW => ['250',   '00',    '0'],     # Rwanda
     SA => ['966',   '00',    '0'],     # Saudi Arabia
     SB => ['677',   '00',  undef],     # Solomon Islands
@@ -201,6 +207,7 @@ my %Codes = (
     SG => [ '65',  '001',  undef],     # Singapore
     SH => ['290',   '00',  undef],     # Saint Helena
     SI => ['386',   '00',    '0'],     # Slovenia
+    SJ => ['378',   '00',    '0'],     # Svalbard and Jan Mayen
     SK => ['421',   '00',    '0'],     # Slovakia
     SL => ['232',   '00',    '0'],     # Sierra Leone
     SM => ['378',   '00',    '0'],     # San Marino
@@ -209,6 +216,7 @@ my %Codes = (
     SR => ['597',   '00',  undef],     # Suriname
     ST => ['239',   '00',    '0'],     # Sao Tome and Principe
     SV => ['503',   '00',  undef],     # El Salvador
+    SY => ['963',   '00',    '0'],     # Syria
     SZ => ['268',   '00',  undef],     # Swaziland
     TC => [  '1',  '011',    '1'],     # Turks and Caicos Islands
     TD => ['235',   '15',  undef],     # Chad
@@ -219,6 +227,7 @@ my %Codes = (
     TL => ['670',   '00',  undef],     # Timor-Leste
     TM => ['993',  '810',    '8'],     # Turkmenistan (IDD really 8**10)
     TN => ['216',   '00',    '0'],     # Tunisia
+    TO => ['676',   '00',  undef],     # Tonga Islands
     TR => [ '90',   '00',    '0'],     # Turkey
     TT => [  '1',  '011',    '1'],     # Trinidad and Tobago
     TV => ['688',   '00',  undef],     # Tuvalu
@@ -241,6 +250,7 @@ my %Codes = (
     YE => ['967',   '00',    '0'],     # Yemen
     YT => ['269',   '00',  undef],     # Mayotte
     ZA => [ '27',   '09',    '0'],     # South Africa
+    ZM => ['260',   '00',    '0'],     # Zambia
     ZW => ['263',  '110',    '0'],     # Zimbabwe
 );
 
