@@ -4,7 +4,7 @@
 #
 
 use strict;
-use Test::More tests => 1121;
+use Test::More 'no_plan';
 
 use_ok('Number::Phone::CountryCode') or exit 1;
 
@@ -144,6 +144,7 @@ KR:82:001:0
 KW:965:00:0
 KY:1:011:1
 KZ:7:810:8
+LA:856:00:0
 LB:961:00:0
 LC:1:011:1
 LI:423:00:
@@ -162,12 +163,14 @@ MG:261:00:0
 MH:692:011:1
 MK:389:00:0
 ML:223:00:0
+MM:95:00:
 MN:976:001:0
 MO:853:00:0
 MP:1:011:1
 MQ:596:00:0
 MR:222:00:0
 MS:1:011:1
+MT:356:00:21
 MU:230:00:0
 MV:960:00:0
 MW:265:00:
@@ -182,9 +185,11 @@ NG:234:009:0
 NI:505:00:0
 NL:31:00:0
 NO:47:00:
+NP:977:00:0
 NR:674:00:0
 NU:683:00:0
 NZ:64:00:0
+OM:968:00:0
 PA:507:00:0
 PE:51:00:0
 PF:689:00:
@@ -202,6 +207,7 @@ QA:974:00:0
 RE:262:00:0
 RO:40:00:0
 RS:381:99:0
+RU:7:810:8
 RW:250:00:0
 SA:966:00:0
 SB:677:00:
@@ -211,6 +217,7 @@ SE:46:00:0
 SG:65:001:
 SH:290:00:
 SI:386:00:0
+SJ:378:00:0
 SK:421:00:0
 SL:232:00:0
 SM:378:00:0
@@ -219,6 +226,7 @@ SO:252:00:
 SR:597:00:
 ST:239:00:0
 SV:503:00:
+SY:963:00:0
 SZ:268:00:
 TC:1:011:1
 TD:235:15:
@@ -229,6 +237,7 @@ TK:690:00:
 TL:670:00:
 TM:993:810:8
 TN:216:00:0
+TO:676:00:
 TR:90:00:0
 TT:1:011:1
 TV:688:00:
@@ -251,4 +260,5 @@ WS:685:0:0
 YE:967:00:0
 YT:269:00:
 ZA:27:09:0
+ZM:260:00:0
 ZW:263:110:0
