@@ -4,7 +4,9 @@ CURRENT
     - Add support for: Cocos (Keeling) Islands (CC), Congo (CG),
       Cook Islands (CK), Cuba (CU), Dominica (DM), Spain (ES), Georgia (GE),
       Guinea (GN), Guam (GU), Guyana (GY), Iceland (IS), Montenegro (ME),
-      Mali (ML)
+      Mali (ML), Laos (LA), Malta (MT), Myanmar (MM), Nepal (NP),
+      Oman (OM), Russia (RU), Svalbard and Jan Mayen (SJ), Syria (SY),
+      Tonga Islands (TO), Zambia (ZM)
 
 0.02  Sat Feb 20 2009
     - Makefile.PL: only require version 5.008
